Sorting activities in the cache alphabetically by name

Many activities clients just show the exact list of results
that the library returns them. in the order that the library uses.

Since this order ends up being shown to the user in quite a few places,
the library now sorts the activities internally.

This affects:
 - KWin (window menu)
 - KCM for window rules
 - Activity pager
 - maybe something else as well

BUG:362774